fix the alignment of some site help messages

--- a/site/styles.css
+++ b/site/styles.css
@@ -911,6 +911,7 @@ input[type=number] {
 #editor-help>* {
     line-height: 1em;
     margin: 0;
+    white-space: pre;
 }
 
 .sound-button {
